<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Sercos_StatusWord" Id="{ae35fa7c-fa1d-00ef-31f2-fe3493c0125f}">
    <Declaration><![CDATA[(*
	S-0-0135 Drive Status
	https://product-help.schneider-electric.com/Machine%20Expert/V1.2/en/ATV340SUG/ATV340SUG/STI_Software_Setup/STI_Software_Setup-22.htm#XREF_D_SE_0083227_1
*)
{attribute 'pack_mode' := '1'}
TYPE ST_Sercos_StatusWord :
STRUCT
	b0_Reserved 					: BIT;
	b1_Reserved						: BIT;
	b2_Reserved						: BIT;
	b3_CommandProcessing			: BIT; //Status command value processing if 0 = ignored
	b4_Halt							: BIT; //Drive halt, 0 = inactive, 1 = active
	b5_PositionFeedback				: BIT; //Position feedback value status (S-0-0403)
	b6_Reserved						: BIT;
	b7_QuickStop					: BIT; //Quick stop, 0 = inactive, 1 = active
	b8_Reserved						: BIT; //Reserved (=0)
	b9_Reserved						: BIT; //Reserved (=0)
	b10_OperationMode				: BIT; //0 = Primary operation mode
	b11_Reserved					: BIT;
	b12_Warning						: BIT; //Warning, 0 = No warning, 1 = Warning
	b13_Error						: BIT; //Drive shut-down error, 0 = No error, 1 = Error
	b14_ReadyToOperate				: BIT; //00 = Not ready to switch on, 01 = Switch on disabled, main power disabled
	b15_ReadyToOperate				: BIT; //10 = Switch on, 11 = Drive enabled
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>